--- a/Events.html
+++ b/Events.html
@@ -224,7 +224,7 @@
                         <img class="Footer-Logo-Img" src="Images/JuscoffeeFooterLogo.png" alt="Juscoffee est 1995" id="Footer-Logo-Img">
                     </div>
                     <div class="Footer-Text">
-                        <p>Copyright © 1995 - 2025 Juscoffee. Alrights Reserved.</p>
+                        <p>Copyright © 1995 - 2025 Juscoffee. All Rights Reserved.</p>
                     </div>
                 </div>
 
@@ -256,4 +256,5 @@
     </div>
    <a href="#top" class="back-to-top"><i class="fa-solid fa-arrow-up"></i></a>
 </body>
+
 </html>
