--- a/Menu.html
+++ b/Menu.html
@@ -468,7 +468,7 @@
                         <img class="Footer-Logo-Img" src="Images/JuscoffeeFooterLogo.png" alt="Juscoffee est 1995" id="Footer-Logo-Img">
                     </div>
                     <div class="Footer-Text">
-                        <p>Copyright © 1995 - 2025 Juscoffee. Alrights Reserved.</p>
+                        <p>Copyright © 1995 - 2025 Juscoffee. All Rights Reserved.</p>
                     </div>
                 </div>
 
@@ -501,4 +501,5 @@
 
     <a href="#top" class="back-to-top"><i class="fa-solid fa-arrow-up"></i></a>
 </body>
+
 </html>
