--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <img class="Footer-Logo-Img" src="Images/JuscoffeeFooterLogo.png" alt="Juscoffee est 1995" id="Footer-Logo-Img">
                     </div>
                     <div class="Footer-Text">
-                        <p>Copyright © 1995 - 2025 Juscoffee. Alrights Reserved.</p>
+                        <p>Copyright © 1995 - 2025 Juscoffee. All Rights Reserved.</p>
                     </div>
                 </div>
 
@@ -221,4 +221,5 @@
     </div>
    <a href="#top" class="back-to-top"><i class="fa-solid fa-arrow-up"></i></a>
 </body>
+
 </html>
